--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,33 +3,219 @@
 <head>
     <meta charset="utf-8"/>
     <title>App</title>
+    <!--https://codepen.io/cliffpyles/pen/OVPJay-->
+    <style>
+        body * {
+            font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+            -webkit-font-smoothing: antialiased;
+        }
+
+        body {
+            background: #efefef;
+            color: rgba(58, 58, 58, 1);
+        }
+
+        .container {
+            /*max-width: 1280px;*/
+            width: 90%;
+            margin: 0px auto;
+        }
+
+        .form-field input {
+            font-size: 1rem;
+            line-height: 1.4rem;
+            height: 1.4rem;
+            max-width: 100%;
+            display: inline-block;
+            padding: 4px 7px;
+            border: 1px solid rgba(32, 60, 84, 0.95);
+            background: rgba(22, 42, 59, 0.95);
+            outline: 0px;
+            color: rgba(136, 176, 210, 0.95);
+        }
+
+        .form-field input::-webkit-input-placeholder {
+            color: rgba(255, 255, 255, 0.35);
+        }
+
+        .form-field input:-moz-placeholder {
+            color: rgba(255, 255, 255, 0.35);
+        }
+
+        .form-field input::-moz-placeholder {
+            color: rgba(255, 255, 255, 0.35);
+        }
+
+        .form-field input:-ms-input-placeholder {
+            color: rgba(255, 255, 255, 0.35);
+        }
+
+        .logo {
+            font-family: "Oswald", Helvetica, Arial, sans-serif;
+            font-size: 1em;
+            letter-spacing: 0.15rem;
+        }
+
+        .logo i {
+            font-size: 1.2em;
+            margin-right: 6px;
+        }
+
+        .dynamic-grid {
+            position: relative;
+            z-index: 1;
+            columns: 240px 1;
+            max-width: 650px;
+            column-gap: 15px;
+        }
+
+        .dynamic-grid.container {
+            padding-top: 6rem;
+        }
+
+        .grid-item {
+            position: relative;
+            display: inline-block;
+            margin: 1rem;
+            max-width: 100%;
+            column-break-inside: avoid;
+        }
+
+        .grid-item .inner {
+            padding: 1rem 1rem 1rem 1rem;
+        }
+
+        .content-box {
+            width: 100%;
+            border: 0px solid rgba(230, 230, 230, 1);
+            background-color: rgba(255, 255, 255, 1);
+            box-shadow: 0px -1px 2px rgba(58, 58, 58, 0.1), 1px 1px 2px rgba(58, 58, 58, 0.1);
+        }
+
+        .content-box-thumb {
+            display: block;
+            max-width: 100%;
+            height: auto;
+        }
+
+        .content-box-header {
+            font-size: 1.75rem;
+            margin: 0.75rem 0rem 0rem 0rem;
+        }
+
+        .content-box-blurb {
+            font-size: 0.85rem;
+            display: block;
+            display: -webkit-box;
+            margin: 0rem;
+            max-width: 100%;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        .readmore-link {
+            display: block;
+            margin: 5px 5px 0px 5px;
+            text-align: right;
+        }
+
+    </style>
+
+    <style>
+        a {
+            text-decoration: none !important;
+        }
+
+        .post-header__img {
+            height: 21px;
+        }
+
+        .post-header__rating {
+            line-height: 32px;
+            vertical-align: text-bottom;
+        }
+
+        .cbh__time {
+            margin: 10px 0;
+            color: rgb(102, 102, 102);
+            font-size: 15px;
+        }
+
+        .cbh__time__image {
+            height: 13px;
+        }
+
+        .pagination {
+            font-size: 30px;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .filters {
+            font-size: 25px;
+            text-align: center;
+        }
+        .total-posts{
+            margin: 5px;
+        }
+    </style>
 </head>
 <body>
 
-    <div>
-        <a href="?bestof=1">DAY</a>
-        <a href="?bestof=7">WEEK</a>
-        <a href="?bestof=30">MONTH</a>
-    </div>
 
-    <div>
-        {{#each posts}}
-            <div>
-                <h3>
-                    <span>{{rating}}</span> <a href={{link}} target="_blank">{{title}}</a>
-                </h3>
-                <p>{{ time }}</p>
+<div id="contentBoxApp">
+    <div id="GridCtrl">
+
+        <div class="container dynamic-grid">
+
+            <div class="filters">
+                <a href="?bestof=1">Day</a>
+                <a href="?bestof=7">Week</a>
+                <a href="?bestof=30">Month</a>
+                <p class="total-posts">({{totalPosts}})</p>
             </div>
-        {{/each}}
-    </div>
 
-    <div>
-        <a href="{{extendQuery page='1'}}">1</a>
-        <a href="{{extendQuery page='2'}}">2</a>
-        <a href="{{extendQuery page='3'}}">3</a>
-        <a href="{{extendQuery page='4'}}">4</a>
-        <a href="{{extendQuery page='5'}}">5</a>
+            {{#each posts}}
+                <article class="grid-item content-box">
+                    <div class="inner">
+                        <h1 class="content-box-header">
+                            <a href={{link}} target="_blank">
+                                <img class="post-header__img" src="{{ get ../resources resources_id }} "/>
+                                {{title}}
+                            </a>
+                            <p class="cbh__time">
+                                {{rating}}
+                                <img class="cbh__time__image"
+                                     src="https://www.searchpng.com/wp-content/uploads/2019/02/Instagram-Like-Icon-1-1024x1024.png">
+                                {{moment time}}
+                            </p>
+                        </h1>
+                        <img class="content-box-thumb" src="{{ imageLink }}"/>
+
+                        <!--<p class="content-box-blurb">-->
+                        <!--{{ gridItem.blurbText }}-->
+                        <!--</p>-->
+
+                    </div>
+                </article>
+            {{/each}}
+
+        </div>
+
+        <div class="pagination">
+            {{#if (cmp currentPage '>' 1)}}
+                <a href="{{ extendQuery page=(math currentPage '-' 1) }}"> <<< </a>
+            {{/if}}
+            <span>{{ currentPage }}</span>
+            <a href="{{ extendQuery page=(math currentPage '+' 1) }}"> >>> </a>
+        </div>
     </div>
+</div>
 
 </body>
 </html>
+
+
+
