--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>App</title>
+    <title>HypeIT</title>
     <!--https://codepen.io/cliffpyles/pen/OVPJay-->
     <style>
         body * {
