--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>HypeIT</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--https://codepen.io/cliffpyles/pen/OVPJay-->
     <style>
         body * {
@@ -11,13 +12,14 @@
         }
 
         body {
+            margin: 0;
             color: rgba(58, 58, 58, 1);
             background-color: rgb(23, 28, 32);
         }
 
         .container {
             /*max-width: 1280px;*/
-            width: 90%;
+            /*width: 90%;*/
             margin: 0px auto;
         }
 
@@ -64,7 +66,7 @@
         }
 
         .dynamic-grid.container {
-            padding-top: 6rem;
+            padding-top: 1rem;
         }
 
         .grid-item {
@@ -125,6 +127,10 @@
             margin-bottom: 20px;
         }
 
+        .pagination a {
+            color: rgba(255, 255, 255, 0.7);
+        }
+
         .filters {
             font-size: 25px;
             text-align: center;
@@ -143,79 +149,233 @@
             color: rgb(95, 95, 95);
         }
 
-        .auth-container, .auth-container a {
+        .auth-container {
             color: rgb(191, 191, 191);
-            text-align: right;
+            float: right;
             margin: 20px;
         }
 
+        .auth-container a {
+            color: rgb(191, 191, 191);
+        }
+
+        .bookmark-icon {
+            width: 18px;
+            fill: rgb(191, 191, 191);
+            float: right;
+            cursor: pointer;
+        }
+
+        .bookmark-icon--true, .bookmark-icon--false, .bookmark-icon--loading {
+            display: none;
+        }
+
+        [data-bookmarked="true"] .bookmark-icon--true {
+            display: block;
+        }
+
+        [data-bookmarked="false"] .bookmark-icon--false {
+            display: block;
+        }
+
+        [data-bookmarked="loading"] .bookmark-icon--loading {
+            display: block;
+        }
+
+        .fa-spin {
+            animation: fa-spin 2s linear infinite;
+        }
+
+        @-webkit-keyframes fa-spin {
+            0% {
+                -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+            }
+            100% {
+                -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+            }
+        }
+
+        .navigation {
+            float: left;
+            margin: 20px;
+            margin-left: 40%;
+        }
+
+        @media screen and (max-width: 1000px) {
+            .navigation {
+                margin-left: 10px;
+            }
+        }
+
+        .navigation a {
+            color: rgba(255, 255, 255, 0.7);
+            font-family: "Roboto", "Open Sans", Helvetica, Arial, sans-serif;
+            font-size: 14px;
+            line-height: 22px;
+            font-weight: 400;
+            margin-right: 20px;
+        }
+
+        .header {
+            background-color: rgb(31, 35, 39);
+        }
+
+        .clearfix::after {
+            content: "";
+            clear: both;
+            display: table;
+        }
+
+        .auth-container__form {
+            display: inline-block;
+        }
+
+        .contentBoxApp {
+            margin-right: 30px;
         }
     </style>
 </head>
 <body>
 
-
-<div id="contentBoxApp">
+<div class="header clearfix">
+    <div class="navigation">
+        <a href="/?bestof=1">DAY</a>
+        <a href="/?bestof=7">WEEK</a>
+        <a href="/?bestof=30">MONTH</a>
+        {{#if user}}<a href="/bookmarked">BOOKMARKED</a>{{/if}}
+    </div>
     <div class="auth-container">
         {{#if user}}
             Hello, {{user.name}}
-            <form method="post" action="/auth/logout">
+            <form class="auth-container__form" method="post" action="/auth/logout">
                 <input type="submit" value="logout">
             </form>
         {{else}}
             <a href="/auth">Login or create account</a>
         {{/if}}
     </div>
-    <div id="GridCtrl">
+</div>
 
-        <div class="container dynamic-grid">
+<div class="contentBoxApp">
 
 
-            <div class="filters">
-                <a href="?bestof=1">Day</a>
-                <a href="?bestof=7">Week</a>
-                <a href="?bestof=30">Month</a>
-                <p class="total-posts">({{totalSeenPosts}}/{{totalPosts}})</p>
-            </div>
+    <div class="container dynamic-grid">
 
-            {{#each posts}}
-                <article class="grid-item content-box">
-                    <div class="inner">
-                        <h1 class="content-box-header">
-                            <a class="content-box-header__link" href={{link}} target="_blank">
-                                <img class="post-header__img" src="{{ get ../resources resources_id }} "/>
-                                {{title}}
-                            </a>
-                            <p class="cbh__time">
-                                {{rating}}
-                                <img class="cbh__time__image"
-                                     src="https://www.searchpng.com/wp-content/uploads/2019/02/Instagram-Like-Icon-1-1024x1024.png">
-                                {{moment time}}
-                            </p>
-                        </h1>
-                        <img class="content-box-thumb" src="{{ imageLink }}"/>
-                    </div>
-                </article>
-            {{/each}}
-
+        <div class="filters">
+            <p class="total-posts">({{totalSeenPosts}}/{{totalPosts}})</p>
         </div>
 
-        <div class="pagination">
-            {{#if user}}
-                <a href="{{ extendQuery isNextPage=true}}">Next >>> </a>
-            {{else}}
-                {{#if (cmp currentPage '>' 1)}}
-                    <a href="{{ extendQuery page=(math currentPage '-' 1) }}"> <<< </a>
-                {{/if}}
-                <span>{{ currentPage }}</span>
-                <a href="{{ extendQuery page=(math currentPage '+' 1) }}"> >>> </a>
+        {{#each posts}}
+            <article class="grid-item content-box">
+                <div class="inner">
+                    <h1 class="content-box-header">
+                        <a class="content-box-header__link" href={{link}} target="_blank">
+                            <img class="post-header__img" src="{{ get ../resources resources_id }} "/>
+                            {{title}}
+                        </a>
+
+                        {{#if ../user}}
+                            <div class="js_bookmark-container" data-postId="{{posts_id}}"
+                                 data-bookmarked="{{bookmarked}}">
+                                <svg class="bookmark-icon bookmark-icon--false" aria-hidden="true" focusable="false"
+                                     data-prefix="far"
+                                     data-icon="bookmark" role="img"
+                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                                    <path d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z">
+                                    </path>
+                                </svg>
+                                <svg class="bookmark-icon bookmark-icon--true" aria-hidden="true" focusable="false"
+                                     data-prefix="fas"
+                                     data-icon="bookmark" role="img"
+                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                                    <path d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z">
+                                    </path>
+                                </svg>
+                                <svg class="bookmark-icon bookmark-icon--loading fa-spin"
+                                     aria-hidden="true" focusable="false" data-prefix="fas" data-icon="spinner"
+                                     role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                    <path
+                                            d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z">
+                                    </path>
+                                </svg>
+                            </div>
+                        {{/if}}
+
+                        <p class="cbh__time">
+                            {{rating}}
+                            <img class="cbh__time__image"
+                                 src="https://www.searchpng.com/wp-content/uploads/2019/02/Instagram-Like-Icon-1-1024x1024.png">
+                            {{moment time}}
+                        </p>
+                    </h1>
+                    <img class="content-box-thumb" src="{{ imageLink }}"/>
+
+                </div>
+            </article>
+        {{/each}}
+
+    </div>
+
+    <div class="pagination">
+        {{#if user}}
+            <a href="{{ extendQuery isNextPage=true}}">Next >>> </a>
+        {{else}}
+            {{#if (cmp currentPage '>' 1)}}
+                <a href="{{ extendQuery page=(math currentPage '-' 1) }}"> <<< </a>
             {{/if}}
-        </div>
+            <span>{{ currentPage }}</span>
+            <a href="{{ extendQuery page=(math currentPage '+' 1) }}"> >>> </a>
+        {{/if}}
     </div>
 </div>
 
+<script>
+    document.querySelectorAll('.js_bookmark-container').forEach(el => {
+        el.addEventListener('click', function() {
+
+            const bookmarkedStates = {
+                true: 'true',
+                false: 'false',
+                loading: 'loading',
+            };
+
+            const parseBool = {
+                [bookmarkedStates.true]: true,
+                [bookmarkedStates.false]: false,
+            };
+
+            const bookmarked = this.getAttribute('data-bookmarked');
+
+            if (!(bookmarked in parseBool)) {
+                throw new TypeError(`Unknown bookmarked type: ${bookmarked}`);
+            }
+
+            if (bookmarked === bookmarkedStates.loading) {
+                return;
+            }
+
+            this.setAttribute('data-bookmarked', bookmarkedStates.loading);
+
+            fetch('/posts/bookmark', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({
+                    postId: this.getAttribute('data-postId'),
+                    bookmark: !parseBool[bookmarked],
+                }),
+            }).then(() => {
+                this.setAttribute('data-bookmarked', !parseBool[bookmarked]);
+            }).catch((e) => {
+                console.error(e);
+                this.setAttribute('data-bookmarked', parseBool[bookmarked]);
+            });
+        });
+    });
+</script>
+
 </body>
 </html>
-
-
-
