--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-80606991-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'UA-80606991-2');
+    </script>
     <meta charset="utf-8"/>
     <title>HypeIT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
