--- a/views/auth.hbs
+++ b/views/auth.hbs
@@ -16,6 +16,7 @@
     </script>
 
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HypeIT</title>
     <!--https://codepen.io/cliffpyles/pen/OVPJay-->
 </head>
