update about page: text change formatting and add github link

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -29,12 +29,14 @@
     <div>
         <h3 class="text-center">About</h3>
         <p class="about-info">
-            News aggregator from Medium, Habr, DevTo.
+            <a href="https://github.com/Buggytheclown/hypeit" class="href" target="_blank">Open source</a> news aggregator.
+
+            Aggregation sources: Medium, Habr, DevTo.
 
             Sort by relative rating:
-            Habr rating is `totalVotes`,
-            Medium rating is `voterCount` // `!clapCount`
-            Devto rating is `score/5` // `5` - magic number for the correct placement of posts among others
+            - Habr rating is `totalVotes`,
+            - Medium rating is `voterCount` // `!clapCount`
+            - Devto rating is `score/5` // `5` - magic number for the correct placement of posts among others
 
             For registered users, we hide viewed posts.
 
