fix typo, selected tag displayed with wrong timeline

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -93,7 +93,7 @@
                             </div>
                         {{/if}}
                         <p class="cbh__time"> {{#each tags}}
-                            <a href="/?bestOf=30&tagName={{this}}">#{{this}}</a> {{/each}}</p>
+                            <a href="/?bestof=30&tagName={{this}}">#{{this}}</a> {{/each}}</p>
                         <p class="cbh__time">
                             {{rating}}
                             <img class="cbh__time__image"
