--- a/views/index.hbs
+++ b/views/index.hbs
@@ -69,23 +69,36 @@
                                  data-locator="bookmark-container"
                                  data-postId="{{posts_id}}"
                                  data-bookmarked="{{bookmarked}}">
-                                <svg class="bookmark-icon bookmark-icon--false" aria-hidden="true" focusable="false"
+                                <svg class="bookmark-icon bookmark-icon--false"
+                                     aria-hidden="true"
+                                     focusable="false"
                                      data-prefix="far"
-                                     data-icon="bookmark" role="img"
-                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                                     data-icon="bookmark"
+                                     role="img"
+                                     xmlns="http://www.w3.org/2000/svg"
+                                     viewBox="0 0 384 512">
                                     <path d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z">
                                     </path>
                                 </svg>
-                                <svg class="bookmark-icon bookmark-icon--true" aria-hidden="true" focusable="false"
+                                <svg class="bookmark-icon bookmark-icon--true"
+                                     aria-hidden="true"
+                                     focusable="false"
                                      data-prefix="fas"
-                                     data-icon="bookmark" role="img"
-                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                                     data-icon="bookmark"
+                                     role="img"
+                                     xmlns="http://www.w3.org/2000/svg"
+                                     viewBox="0 0 384 512">
                                     <path d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z">
                                     </path>
                                 </svg>
                                 <svg class="bookmark-icon bookmark-icon--loading fa-spin"
-                                     aria-hidden="true" focusable="false" data-prefix="fas" data-icon="spinner"
-                                     role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                     aria-hidden="true"
+                                     focusable="false"
+                                     data-prefix="fas"
+                                     data-icon="spinner"
+                                     role="img"
+                                     xmlns="http://www.w3.org/2000/svg"
+                                     viewBox="0 0 512 512">
                                     <path
                                             d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z">
                                     </path>
