--- a/views/about.hbs
+++ b/views/about.hbs
@@ -24,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
 </head>
 <body>
-{{> header (object user=user) }}
+{{> header (object user=user url=url) }}
 <div class="about-container">
     <div>
         <h3 class="text-center">About</h3>
