--- a/views/auth.hbs
+++ b/views/auth.hbs
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-{{> header (object user=user) }}
+{{> header (object user=user url=url) }}
 <div class="login-container col-sm-6 col-sm-offset-4">
     <b>Login</b><br><br>
     <form method="POST" action="/auth">
