add contacts section

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -9,7 +9,7 @@
     <div>
         <h3 class="text-center">About</h3>
         <p class="about-info">
-            <a href="https://github.com/Buggytheclown/hypeit" class="href" target="_blank">Open source</a> news aggregator.
+            <a href="https://github.com/Buggytheclown/hypeit" class="href" target="_blank" rel="noopener">Open source</a> news aggregator.
 
             Aggregation sources: Medium, Habr, DevTo.
 
